@@ -2,6 +2,7 @@
 
  - Fixed connection spinning in contrib/hotline.
  - Fixed Unicode problems in ardj console (CLI).
+ - Fixed the voters command in fresh install (Jabber).
  - Added history for twitter-fetcher (contrib).
  - Added an option to disable voting (config).
  - Added automatic promotion of most active voters to admins.
